Fixed bugs and updates on UI